--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ div#um{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
 }
 iframe{
     width: 100%;
@@ -47,8 +48,7 @@ html, body{
 #dois{
     display: flex;
     flex-direction: column;
-    align-items: end;
-    position: fixed;
+    align-items: flex-end;
 }
 #dois > a > img{
     width: 60px;
